// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostPreview > renders correctly 1`] = `
"<li class="post-preview">
  <!--v-if--><time><span>20 marzo 2024</span></time>
  <div>
    <routerlink to="/post/test-post">
      <h2 style="view-transition-name: post-title-test-post;">Test Post Title</h2>
    </routerlink>
    <div>
      <routerlink to="/tags/test">test</routerlink>
      <routerlink to="/tags/vue">vue</routerlink>
    </div>
    <p>This is a test post summary</p>
    <routerlink to="/post/test-post"> Continua a leggere (5) minuti <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
        <path d="M5 12h14"></path>
        <path d="M12 5l7 7-7 7"></path>
      </svg></routerlink>
  </div>
</li>"
`;

exports[`PostPreview > renders pinned post correctly 1`] = `
"<li class="post-preview pinned"><span class="badge" title="Questo post è stato messo in evidenza perché potrebbe essere stato aggiornato di recente o per qualche contesto attuale.">in evidenza</span><time><span>20 marzo 2024</span></time>
  <div>
    <routerlink to="/post/test-post">
      <h2 style="view-transition-name: post-title-test-post;">Test Post Title</h2>
    </routerlink>
    <div>
      <routerlink to="/tags/test">test</routerlink>
      <routerlink to="/tags/vue">vue</routerlink>
    </div>
    <p>This is a test post summary</p>
    <routerlink to="/post/test-post"> Continua a leggere (5) minuti <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
        <path d="M5 12h14"></path>
        <path d="M12 5l7 7-7 7"></path>
      </svg></routerlink>
  </div>
</li>"
`;
